--- a/Chalkable.Web/assets/sass/partials/controls/_date-picker.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_date-picker.scss
@@ -152,6 +152,10 @@
             }
           }
 
+          &.ui-state-disabled{
+            color: #aaa;
+          }
+
           &:first-child{
             border-left-width: 0;
           }
