--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -8,14 +8,16 @@ BODY {
             #main {
               DIV.app-general-info{
                 .app-header{
-                  margin-bottom: 55px;
+                  margin-bottom: 46px;
+                  margin-top: 36px;
                   .app-icon{
                     display: inline-block;
                     padding: 5px 5px 1px 5px;
                     background: white;
                     border-radius: 3px;
                     border: 1px solid #c7c7c7;
-                    margin-left: 17px;
+                    margin-left: 12px;
+                    margin-top: -1px;
                     img{
                       width: 74px;
                       height: 74px;
@@ -58,6 +60,7 @@ BODY {
                   padding: 5px 3px 4px 5px;
                 }
                 .app-installs{
+                  margin-left: 4px;
                   .button-block:hover{
                     top: -19px !important;
                     width: 660px;
@@ -70,6 +73,7 @@ BODY {
                   .block{
                     .panel-header{
                       margin-bottom: 20px;
+                      padding: 0 !important;
                     }
                   }
                   .chart-bg{
@@ -112,7 +116,7 @@ BODY {
                 }
 
                 .app-store-balance{
-                  height: 400px;
+                  height: 245px;
                   .app-store-views{
                     text-align: center;
                     margin-top: 40px;
@@ -123,7 +127,7 @@ BODY {
                   .app-store-current-balance{
                     width: 35%;
                     float: right;
-                    margin-top: 40px;
+                    margin-top: 0px;
                     display: inline-block;
 
                     .budget-chart-container{
@@ -181,13 +185,15 @@ BODY {
                 }
 
                 .reviews.developer{
-                  .chlk-scrollbox{
-                    position: relative;
-                  }
+
                   display: block;
                   width: auto !important;
+                  margin-left: 14px;
                   .review-link{
                     display: inline-block;
+                  }
+                  .chlk-scrollbox{
+                    position: relative;
                   }
                 }
 
