fixed for CHLK-2577 Gradebook Grid view: refinements

--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridSummary.jade
@@ -23,28 +23,45 @@
                 a(href="javascript:").blue-button.small.add-comment.right=Msg.Add
         each item,i in self.getItems()
             div(class=(i==0) ? "open" : "", data-index=i).marking-period-container
-                div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title=Msg.Marking_Period + ' ' +  item.getMarkingPeriod().getName()
+                div(data-tooltip=(item.getAvg() != null ? Msg.Avg + " " + item.getAvg() : 'No grades yet')).mp-title
+                    mpName = item.getMarkingPeriod().getName()
+                    span(data-tooltip=mpName, data-tooltip-type="overflow")=mpName
+                    .grading-selects
+                        +Select('standard')(data-placeholder=Msg.All_standards).standards-select.grading-select
+                            +Option('', Msg.All_standards , true)
+                            +Option(1, 'Standard 1' , false)
+                            +Option(2, 'Standard 2' , false)
+                        +Select('category')(data-placeholder=Msg.All_categories).categories-select.grading-select
+                            +Option('', Msg.All_categories , true)
+                            +Option(1, 'Category 1' , false)
+                            +Option(2, 'Category 2' , false)
                     a(href="javascript:").grey-button.comment-button=Msg.Comment
                     .collapse
                 .mp-data
                     .ann-types-container
+                        .dotted-container.name-container.with-horizontal-dots
+                            .type-name=Msg.Student(true)
+                            .time
+                            .student-name
+                                .max-score.dotted-h
+                            each student,i in item.getStudents()
+                                name = student.getStudentInfo().getDisplayName()
+                                div(row-index=i).student-name
+                                    div(data-tooltip=name, data-tooltip-type="overflow").dotted-h=name
+                                    if student.isWithdrawn()
+                                        div(data-tooltip="Withdrawn").withdrawn
+                            .student-name
+                                .dotted-h=Msg.Avg
                         +LeftRightToolbar()(
                             needDots = true,
                             roundedDots = true,
-                            padding = 150
-                        )
-                            .dotted-container.name-container.with-horizontal-dots
-                                .type-name=Msg.Student(true)
-                                each student,i in item.getStudents()
-                                    div(row-index=i).student-name
-                                        .dotted-h=student.getStudentInfo().getDisplayName()
-                            .dotted-container.avg-container.with-horizontal-dots
-                                .type-name #{Msg.Avg}.
-                                each student,i in item.getStudents()
-                                    div(row-index=i).dotted-h.avg=student.getAvg()
+                            padding = 77
+                        ).grid-toolbar.i-b
                             each announcement in item.getAnnouncements()
-                                .dotted-container.grade-container.with-horizontal-dots
-                                    .type-name=announcement.getAnnouncementTypeName()
+                                div(data-max-score=announcement.getMaxScore()).dotted-container.grade-container.with-horizontal-dots
+                                    .type-name=announcement.getTitle()
+                                    .time=announcement.getExpiresDate().format('M d')
+                                    .max-score.dotted-h=announcement.getMaxScore()
                                     each info,i in announcement.getStudentAnnouncements().getItems()
                                         normalValue = self.getNormalValue(info)
                                         div(row-index=i, class=(parseInt(normalValue, 10) ? '' : 'letter')).dotted-h.grade-value=normalValue
@@ -69,3 +86,4 @@
                                                 +Hidden('passed', info.isPassed())
                                                 +Hidden('complete', info.isComplete())
                                                 input(value=normalValue, name="gradevalue").grade-autocomplete
+                                    .dotted-h.grade-value=announcement.getAvg()
