--- a/Chalkable.Web/assets/jade/activities/attendance/StudentReasonsCombo.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/StudentReasonsCombo.jade
@@ -1,5 +1,5 @@
 currentReasons = self.getCurrentReasons() || [];
 currentId = self.getCurrentId();
 +Select('attendanceReadons')(disabled=!currentReasons.length).attendance-reason-select.grey-select
-    each reason in currentReasons
+    each reason,i in currentReasons
         +Option(reason.getId(), reason.getDescription(), currentId == reason.getId())
