fixed for CHLK-2575 Gradebook: Remove "F+" and "F-" as selectable grade values
updated highcharts

fixed grading popup

--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -847,6 +847,7 @@ BODY {
 
       &.small{
         background: url(images/grading/small-chart.png) 20px 8px no-repeat;
+        text-align: left;
       }
     }
   }
