--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -79,11 +79,11 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                 .advanced-options-container.x-hidden
                     .weight-multiplier.new-input-container
                         .title=Msg.Weight_Multiplier
-                        input(name='weightmultiplier', placeholder="1.00", value=announcement.getWeightMultiplier())
+                        input(name='weightmultiplier', placeholder="1.00", value=announcement.getWeightMultiplier() || 1.00)
                         div(data-tooltip=Msg.Weight_Multiplier_Tooltip_Message).question-mark ?
                     .weight-addition.new-input-container
                         .title=Msg.Weight_Addition
-                        input(name='weightaddition', placeholder="1.00", value=announcement.getWeightAddition())
+                        input(name='weightaddition', placeholder="0.00", value=announcement.getWeightAddition() || 0.00)
                         div(data-tooltip=Msg.Weight_Addition_Tooltip_Message).question-mark ?
                     .check-box-container
                         .title=Msg.Hide_from_Students
