--- a/Chalkable.Web/assets/jade/activities/announcement/StandardsColumns.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StandardsColumns.jade
@@ -3,7 +3,7 @@ if standards.length
     td.name-td
         .standards-names.column
             each standard in standards
-                div(data-description=standard.getDescription()).standard-name.column-cell
+                +ActionLink('announcement', 'showStandardsByCategory', self.getClassId(), self.getSubjectId(), self.getId()).standard-name.column-cell
                     .name=standard.getName()
                     .right-triangle
 else
