--- a/Chalkable.Web/assets/jade/activities/announcement/AddMathStandards.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AddMathStandards.jade
@@ -4,14 +4,14 @@
         span Choose a standard that describe the item
     +ActionForm('announcement', 'addStandards').add-standards-form
         .standards-list-container
-            standards = self.getItemStandards() || []
+            standardSubjects = self.getItemStandards() || []
             table
                 tr.standards-row
                     td.name-td
                         .standards-names.column
-                            each standard in standards
-                                div(data-description=standard.getDescription()).standard-name.column-cell
-                                    .name=standard.getName()
+                            each subject in standardSubjects
+                                +ActionLink('announcement', 'showStandardsByCategory', self.getClassId(), subject.getId(), subject.getDescription()).standard-name.column-cell
+                                    .name=subject.getName()
                                     .right-triangle
                     td
                         .standards-description
