--- a/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
@@ -52,13 +52,15 @@
             .column{
               width: 243px;
 
-              >DIV{
+              .column-cell{
+                display: block;
                 height: 33px;
                 padding: 10px 30px 10px 13px;
                 text-align: left;
                 border-bottom: 1px solid #d7d7d7;
                 position: relative;
                 cursor: pointer;
+                color: #9c9c9c;
 
                 .right-triangle{
                   width: 0;
@@ -77,7 +79,7 @@
                   vertical-align: middle;
                 }
 
-                &.pressed, &:hover{
+                &.active, &:hover{
                   color: white;
                   background: #2f7790;
 
