--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -55,9 +55,9 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                     each standard in standards
                         .grey-button.same-on-hover
                             span=standard.getName()
-                            .remove-standard
+                            +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
                 .title=Msg.Click_to_add_standard
-                +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), classId).add-standards-btn.x-hidden
+                +ActionLink('announcement', 'showStandards', announcement.getAnnouncementTypeName(), announcement.getId(), classId).add-standards-btn.x-hidden
         .drop-down-container
         input(type="submit",id="list-last-button",value="listLast", name="submitType", class='x-hidden validate-skip')
         if !announcement.getState()
