--- a/Chalkable.Web/assets/jade/activities/announcement/StandardsColumns.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StandardsColumns.jade
@@ -3,9 +3,13 @@ if standards.length
     td.name-td
         .standards-names.column
             each standard in standards
-                +ActionLink('announcement', 'showStandardsByCategory', self.getClassId(), self.getSubjectId(), self.getId()).standard-name.column-cell
+                +ActionLink('announcement', 'showStandardsByCategory', self.getClassId(), self.getSubjectId(), standard.getDescription(), standard.getStandardId())(
+                    data-id=standard.getStandardId()
+                ).standard-name.column-cell
                     .name=standard.getName()
                     .right-triangle
+    td
+        .standards-description
 else
     td
         .standards-description=self.getDescription()
