finished standards adding

--- a/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_add_standards_dialog.scss
@@ -34,6 +34,10 @@
             color: #9c9c9c;
             overflow-x: auto;
 
+            .standards-description{
+              padding: 10px 30px 10px 13px;
+            }
+
             table{
               border-spacing: 0;
             }
