--- a/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
+++ b/Chalkable.Web/assets/sass/partials/main/announcement/_form.scss
@@ -535,60 +535,70 @@ BODY {
               border: 1px solid #a1a1a1;
 
               &#content{
-                height: 100px !important;
+                //height: 100px !important;
                 padding-bottom: 53px;
               }
             }
-            .add-standards{
-              border-top: dashed 3px #e0e0e0;
-              background-color: white;
-              width: 364px;
+
+            .add-standards-container{
               position: relative;
               top: -62px;
-              left: 11px;
-              text-align: center;
-              @include border-radius(0px 0px 5px 5px);
-              .standards-list{
-                text-align: left;
+              background: white;
+              border: 1px solid #a1a1a1;
+              border-top: none;
+              @include border-radius(0 0 5px 5px);
+              width: 381px;
 
-                .grey-button{
-                  min-width: 44px;
-                  padding: 4px 8px 6px 9px;
-                  font-size: 12px;
-                  margin-bottom: 2px;
-                  margin-right: 8px;
-                  cursor: pointer;
-                  position: relative;
+              .add-standards{
+                border-top: dashed 3px #e0e0e0;
+                background-color: white;
+                width: 364px;
+                position: relative;
+                left: 11px;
+                text-align: center;
+                @include border-radius(0px 0px 5px 5px);
+                .standards-list{
+                  text-align: left;
 
-                  .remove-standard{
-                    display: none;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    background: url(images/icons/remove.png) center center no-repeat;
-                  }
+                  .grey-button{
+                    min-width: 44px;
+                    padding: 4px 8px 6px 9px;
+                    font-size: 12px;
+                    margin-bottom: 2px;
+                    margin-right: 8px;
+                    cursor: pointer;
+                    position: relative;
 
-                  &:hover{
                     .remove-standard{
-                      display: block;
+                      display: none;
+                      position: absolute;
+                      top: 0;
+                      left: 0;
+                      right: 0;
+                      bottom: 0;
+                      background: url(images/icons/remove.png) center center no-repeat;
                     }
 
-                    SPAN{
-                      opacity: 0.3;
+                    &:hover{
+                      .remove-standard{
+                        display: block;
+                      }
+
+                      SPAN{
+                        opacity: 0.3;
+                      }
                     }
                   }
-                }
 
-              }
-              .title{
-                color: #e0e0e0;
-                font-weight: bold;
-                font-size: 12px;
-                padding-top: 12px;
-                padding-bottom: 12px;
-                cursor: pointer;
+                }
+                .title{
+                  color: #e0e0e0;
+                  font-weight: bold;
+                  font-size: 12px;
+                  padding-top: 12px;
+                  padding-bottom: 12px;
+                  cursor: pointer;
+                }
               }
             }
 
