--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekDayPopUp.jade
@@ -26,7 +26,7 @@
                             div
                                 p.item-title #{item.getAnnouncementTypeName()} #{item.getOrder()}
     if !self.getUserRole().isStudent()
-        +ActionLink('announcement', 'add', null, null, self.getDate().format('mm/dd/yy'), true).ann-button.plus-ann
+        +ActionLink('announcement', 'addViaCalendar', self.getDate().format('mm/dd/yy'), true).ann-button.plus-ann
 
 
 
