fixed drop Score in announcement view

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementGradingPart.jade
@@ -46,7 +46,7 @@ getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value,
                         .alerts-pop-up-content
                             div(
                                 data-type=alertsEnum.DROP.valueOf(),
-                                class=isDrop ? 'disabled' : ''
+                                class=isDrop || !self.isAbleDropStudentScore() ? 'disabled' : ''
                             ).alerts-pop-up-item=Msg.Drop
                             div(
                                 data-type=alertsEnum.FILL.valueOf(),
