--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -75,5 +75,6 @@ mixin AnnouncementTooltip()
                         applications = self.getApplications(),
                         userRole = self.getUserRole(),
                         owner = self.getOwner(),
-                        announcementId = self.getId()
+                        announcementId = self.getId(),
+                        maxScore = self.getMaxScore()
                     )
