--- a/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/StudentAnnouncement.jade
@@ -1,11 +1,10 @@
-res = self.getDisplayValue()
+normalValue = self.getNormalValue()
 itemCls = (self.isDropped() ? 'dropped' :'')
 selectedCls = (!self.isReadonly() ? 'not-selected' : '')
 .grade-triangle
 div(class=self.getAlertClass(), data-tooltip=self.getTooltipText()).alert-flag
-div(class=selectedCls + ' ' + itemCls).i-b=res
+div(class=selectedCls + ' ' + itemCls).i-b=normalValue
 div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
-    normalValue = self.getNormalValue()
     if !self.isReadonly()
         .input-container
             INPUT(
@@ -16,4 +15,4 @@ div(class="selected " + itemCls, rowIndex=i, recId=self.getId()).i-b
                 data-value=normalValue,
                 class=self.isGradeDisabled() ? "disabled-grade" : "with-grid-focus" + ((!normalValue && normalValue != 0) ? " empty-grade" : "")
             ).no-padding.grade-input
-            .letters 100 - 0
+            .letters 0 - #{self.getMaxScore()}
