--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -76,5 +76,6 @@ mixin AnnouncementTooltip()
                         userRole = self.getUserRole(),
                         owner = self.getOwner(),
                         announcementId = self.getId(),
-                        maxScore = self.getMaxScore()
+                        maxScore = self.getMaxScore(),
+                        ableDropStudentScore = self.isAbleDropStudentScore()
                     )
