--- a/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_IndexLayout.cshtml
@@ -79,7 +79,7 @@
 					<div class="description">
 						<h1>Developers</h1>
 						<p>Integrating your web app with the Chalkable App Store gives you the opportunity to be exposed to millions of users, collect payments, and deeply integrate into the core Chalkable experience. Using the API, your app will be able to leverage the Chalkable platform (user info, schedule, grading, attendance, discipline, messaging, notifications, etc) to help you deliver a great experience to students, teachers, parents, or administrators.</p>
-						<a href="@Url.Content("~/Account/Developers")" class="btn">Submit your app</a>
+						<a href="@Url.Content("~/Developer/Info")" class="btn">Submit your app</a>
 					</div>
 				</div>
 			</div>
