fixed sort button in app market page

--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market.scss
@@ -105,6 +105,15 @@ DIV.page {
               }
 
               .sort{
+                .chzn-container{
+                  .chzn-single{
+                    span{
+                      margin: 0px;
+                      text-align: center;
+                      width: 95%;
+                    }
+                  }
+                }
                 span{
                   color: #8f8f8f;
                   font-size: 14px;
