--- a/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
+++ b/Chalkable.Web/assets/sass/partials/main/apps/appMarket/_app_market_install.scss
@@ -31,6 +31,11 @@
             border-bottom: 1px solid #d7d7d7;
             padding-bottom: 15px;
             min-height: 15px;
+
+            .column{
+              display: inline-block;
+              vertical-align: top;
+            }
           }
 
           .install-info{
