updated set grade procedure on Announcement View

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementView.jade
@@ -20,11 +20,8 @@ mixin AnnouncementTooltip()
     gradeViewApps = self.getGradeViewApps()
     if studentAnnouncementsInfo
         studentAnnouncements = studentAnnouncementsInfo.getItems()
-        //gradingStyle = studentAnnouncementsInfo.getGradingStyle()
-        //gradingMapping = studentAnnouncementsInfo.getMapping()
-        //getGrade = function(value){return GradingStyler.getLetterByGrade(value, gradingMapping, gradingStyle)}
-        //getGradeNumber = function(value){return GradingStyler.getGradeNumberValue(value, gradingMapping, gradingStyle)}
     +FeedItem(self).animated-item
+    .autocomplete-list.announcement-view
     .panel-bg
         .action-bar.buttons
             .container
